--- a/archives/toutiao-search/2023-11-16.md
+++ b/archives/toutiao-search/2023-11-16.md
@@ -1,55 +1,81 @@
 # 2023-11-16
 
-共 147 条
+共 171 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 16 2023 08:29:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 16 2023 09:45:13 GMT+0800 (China Standard Time) -->
 1. [习近平：美方应停止武装台湾](https://so.toutiao.com/search?keyword=习近平：美方应停止武装台湾)
-1. [习近平同拜登散步交谈](https://so.toutiao.com/search?keyword=习近平同拜登散步交谈)
-1. [携手构建亚太命运共同体](https://so.toutiao.com/search?keyword=携手构建亚太命运共同体)
-1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
+1. [中美元首会晤：推动恢复两军高层沟通](https://so.toutiao.com/search?keyword=中美元首会晤：推动恢复两军高层沟通)
+1. [一分钟带你了解斐洛里庄园](https://so.toutiao.com/search?keyword=一分钟带你了解斐洛里庄园)
+1. [中美元首相互道别](https://so.toutiao.com/search?keyword=中美元首相互道别)
+1. [中美元首散步交谈](https://so.toutiao.com/search?keyword=中美元首散步交谈)
+1. [媒体：中美关系成本届APEC峰会焦点](https://so.toutiao.com/search?keyword=媒体：中美关系成本届APEC峰会焦点)
 1. [王自如在格力到底做了什么](https://so.toutiao.com/search?keyword=王自如在格力到底做了什么)
-1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
+1. [用苹果四件套贫困生被终止发助学金](https://so.toutiao.com/search?keyword=用苹果四件套贫困生被终止发助学金)
+1. [不叠被子罚10元是谁给的权力](https://so.toutiao.com/search?keyword=不叠被子罚10元是谁给的权力)
 1. [渐冻人蔡磊腿脚已在逐渐恢复](https://so.toutiao.com/search?keyword=渐冻人蔡磊腿脚已在逐渐恢复)
-1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
-1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
-1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
 1. [罗翔辟谣“一夜白头”](https://so.toutiao.com/search?keyword=罗翔辟谣“一夜白头”)
 1. [旧金山机场一路上都是五星红旗](https://so.toutiao.com/search?keyword=旧金山机场一路上都是五星红旗)
 1. [媒体：王自如让全网打工人自愧不如](https://so.toutiao.com/search?keyword=媒体：王自如让全网打工人自愧不如)
+1. [香港一女子遇扫黄翻窗跳下](https://so.toutiao.com/search?keyword=香港一女子遇扫黄翻窗跳下)
+1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
+1. [广州电动自行车限行政策正式出台](https://so.toutiao.com/search?keyword=广州电动自行车限行政策正式出台)
+1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
+1. [女生被领导批评发现同事偷拍后憋笑](https://so.toutiao.com/search?keyword=女生被领导批评发现同事偷拍后憋笑)
+1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
+1. [冰岛进入紧急状态当地华人祈祷无恙](https://so.toutiao.com/search?keyword=冰岛进入紧急状态当地华人祈祷无恙)
+1. [曝伊朗曾告知哈马斯：不会直接干预](https://so.toutiao.com/search?keyword=曝伊朗曾告知哈马斯：不会直接干预)
+1. [中国男足本次世界杯预选赛有何不同](https://so.toutiao.com/search?keyword=中国男足本次世界杯预选赛有何不同)
+1. [冰岛着手给地热发电厂建防护墙](https://so.toutiao.com/search?keyword=冰岛着手给地热发电厂建防护墙)
+1. [加沙最大医院为何成战争“风暴眼”](https://so.toutiao.com/search?keyword=加沙最大医院为何成战争“风暴眼”)
+1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
+1. [联合国安理会就巴以局势通过决议](https://so.toutiao.com/search?keyword=联合国安理会就巴以局势通过决议)
+1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
+1. [女生歌唱比赛唱功引网友赞叹](https://so.toutiao.com/search?keyword=女生歌唱比赛唱功引网友赞叹)
+1. [小宝宝“熟练作案”开电视放动画片](https://so.toutiao.com/search?keyword=小宝宝“熟练作案”开电视放动画片)
+1. [媒体人：双11释放了3个信号](https://so.toutiao.com/search?keyword=媒体人：双11释放了3个信号)
+1. [小杨哥演唱会成本超3000万](https://so.toutiao.com/search?keyword=小杨哥演唱会成本超3000万)
+1. [队记：我猜追梦可能被禁赛1-3场](https://so.toutiao.com/search?keyword=队记：我猜追梦可能被禁赛1-3场)
+1. [三辆渣土车高架并行被交警处罚](https://so.toutiao.com/search?keyword=三辆渣土车高架并行被交警处罚)
+1. [意大利监狱释放一肥胖杀人犯](https://so.toutiao.com/search?keyword=意大利监狱释放一肥胖杀人犯)
+1. [“杭州30亿量化跑路”事件冲击扩大](https://so.toutiao.com/search?keyword=“杭州30亿量化跑路”事件冲击扩大)
+1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
+1. [中国霸总短剧收割欧美市场](https://so.toutiao.com/search?keyword=中国霸总短剧收割欧美市场)
+1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
+1. [曝联盟正在进一步调查勇狼战冲突](https://so.toutiao.com/search?keyword=曝联盟正在进一步调查勇狼战冲突)
+1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
+1. [女子驾车落水钓鱼大爷下水施救](https://so.toutiao.com/search?keyword=女子驾车落水钓鱼大爷下水施救)
+1. [被骗缅北又释放回国的人会被处罚吗](https://so.toutiao.com/search?keyword=被骗缅北又释放回国的人会被处罚吗)
+1. [爸爸叮嘱女婿：遇事不可以打她](https://so.toutiao.com/search?keyword=爸爸叮嘱女婿：遇事不可以打她)
+1. [卡塔尔裁判组执法国足客战泰国](https://so.toutiao.com/search?keyword=卡塔尔裁判组执法国足客战泰国)
+1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
+1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
+1. [我国与APEC经济体经贸合作不断深化](https://so.toutiao.com/search?keyword=我国与APEC经济体经贸合作不断深化)
+1. [10月份国民经济数据有哪些亮点](https://so.toutiao.com/search?keyword=10月份国民经济数据有哪些亮点)
+1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
+1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
+1. [习近平同拜登散步交谈](https://so.toutiao.com/search?keyword=习近平同拜登散步交谈)
+1. [携手构建亚太命运共同体](https://so.toutiao.com/search?keyword=携手构建亚太命运共同体)
+1. [胡锡进：国际社会如何看中美元首会晤](https://so.toutiao.com/search?keyword=胡锡进：国际社会如何看中美元首会晤)
+1. [走进中美元首会晤的乡村庄园](https://so.toutiao.com/search?keyword=走进中美元首会晤的乡村庄园)
 1. [95后女孩这英模仿那英走红](https://so.toutiao.com/search?keyword=95后女孩这英模仿那英走红)
 1. [博主实探重庆出租车拉人宰客现象](https://so.toutiao.com/search?keyword=博主实探重庆出租车拉人宰客现象)
-1. [男子2天没上班 同事报警救他一命](https://so.toutiao.com/search?keyword=男子2天没上班+同事报警救他一命)
 1. [轮船突发船体断裂下沉 无人员伤亡](https://so.toutiao.com/search?keyword=轮船突发船体断裂下沉+无人员伤亡)
-1. [问界M5追尾施工车 官方回应](https://so.toutiao.com/search?keyword=问界M5追尾施工车+官方回应)
 1. [行李箱成今年双十一台湾消费爆款](https://so.toutiao.com/search?keyword=行李箱成今年双十一台湾消费爆款)
-1. [男子19岁杀人后潜逃35年落网](https://so.toutiao.com/search?keyword=男子19岁杀人后潜逃35年落网)
-1. [加沙最大医院为何成战争“风暴眼”](https://so.toutiao.com/search?keyword=加沙最大医院为何成战争“风暴眼”)
 1. [老人冠心病发作 女孩拦警车求助](https://so.toutiao.com/search?keyword=老人冠心病发作+女孩拦警车求助)
 1. [赵雅芝70岁生日照](https://so.toutiao.com/search?keyword=赵雅芝70岁生日照)
-1. [猪肉价格大降超40%是什么原因](https://so.toutiao.com/search?keyword=猪肉价格大降超40%是什么原因)
-1. [女演员罗海琼回应发型显老](https://so.toutiao.com/search?keyword=女演员罗海琼回应发型显老)
-1. [女生被领导批评发现同事偷拍后憋笑](https://so.toutiao.com/search?keyword=女生被领导批评发现同事偷拍后憋笑)
 1. [美股三大指数收涨](https://so.toutiao.com/search?keyword=美股三大指数收涨)
-1. [多家大厂加入鸿蒙开发](https://so.toutiao.com/search?keyword=多家大厂加入鸿蒙开发)
 1. [“这英”回应走红：确实蹭了热度](https://so.toutiao.com/search?keyword=“这英”回应走红：确实蹭了热度)
-1. [湖南省委书记到烂尾楼暗访](https://so.toutiao.com/search?keyword=湖南省委书记到烂尾楼暗访)
-1. [“顺其自然”25年累计捐赠1577万](https://so.toutiao.com/search?keyword=“顺其自然”25年累计捐赠1577万)
 1. [斯科蒂·巴恩斯转发评论追梦锁喉照](https://so.toutiao.com/search?keyword=斯科蒂·巴恩斯转发评论追梦锁喉照)
 1. [初二女生被拖入地下道施暴](https://so.toutiao.com/search?keyword=初二女生被拖入地下道施暴)
-1. [爸爸叮嘱女婿：遇事不可以打她](https://so.toutiao.com/search?keyword=爸爸叮嘱女婿：遇事不可以打她)
 1. [中传回应菜鸟驿站火情](https://so.toutiao.com/search?keyword=中传回应菜鸟驿站火情)
 1. [香港女子遇扫黄翻窗跳下引市民围观](https://so.toutiao.com/search?keyword=香港女子遇扫黄翻窗跳下引市民围观)
 1. [48岁吉雪萍：走出失去女儿的至痛](https://so.toutiao.com/search?keyword=48岁吉雪萍：走出失去女儿的至痛)
-1. [读懂“体制化”的王自如](https://so.toutiao.com/search?keyword=读懂“体制化”的王自如)
 1. [消息称政府拟再出手救楼市](https://so.toutiao.com/search?keyword=消息称政府拟再出手救楼市)
 1. [青岛栈桥拍照大爷被要求停止营业](https://so.toutiao.com/search?keyword=青岛栈桥拍照大爷被要求停止营业)
 1. [网红跳跳狗“黑妞”去世](https://so.toutiao.com/search?keyword=网红跳跳狗“黑妞”去世)
-1. [小杨哥演唱会成本超3000万](https://so.toutiao.com/search?keyword=小杨哥演唱会成本超3000万)
-1. [大爷冰上打陀螺被劝上岸激动回怼](https://so.toutiao.com/search?keyword=大爷冰上打陀螺被劝上岸激动回怼)
 1. [美法官对特朗普初选资格作出裁决](https://so.toutiao.com/search?keyword=美法官对特朗普初选资格作出裁决)
 1. [女儿遇电诈母亲11万积蓄被骗光](https://so.toutiao.com/search?keyword=女儿遇电诈母亲11万积蓄被骗光)
-1. [东北大爷把楼下积雪砌成20米城墙](https://so.toutiao.com/search?keyword=东北大爷把楼下积雪砌成20米城墙)
 1. [雷吉：快船天赋四溢但有些重叠](https://so.toutiao.com/search?keyword=雷吉：快船天赋四溢但有些重叠)
 1. [村超球员回应：被黄日华的真诚感动](https://so.toutiao.com/search?keyword=村超球员回应：被黄日华的真诚感动)
 1. [华科大旁一饺子馆解高数连wifi](https://so.toutiao.com/search?keyword=华科大旁一饺子馆解高数连wifi)
@@ -73,7 +99,6 @@
 1. [百瑞信托：从未与瑜瑶等私募合作](https://so.toutiao.com/search?keyword=百瑞信托：从未与瑜瑶等私募合作)
 1. [首条深市主板宽基指数发布](https://so.toutiao.com/search?keyword=首条深市主板宽基指数发布)
 1. [大闸蟹每只跌破10元](https://so.toutiao.com/search?keyword=大闸蟹每只跌破10元)
-1. [测评红魔9Pro：唯一盖后纯平手机](https://so.toutiao.com/search?keyword=测评红魔9Pro：唯一盖后纯平手机)
 1. [山东6名省管干部去向明确](https://so.toutiao.com/search?keyword=山东6名省管干部去向明确)
 1. [58岁退休的原市委书记落马](https://so.toutiao.com/search?keyword=58岁退休的原市委书记落马)
 1. [花12000元补地漏一月后又漏水](https://so.toutiao.com/search?keyword=花12000元补地漏一月后又漏水)
@@ -107,7 +132,6 @@
 1. [女子疑练车练崩溃暴砸教练车](https://so.toutiao.com/search?keyword=女子疑练车练崩溃暴砸教练车)
 1. [回响原著作者揭秘书中彩蛋](https://so.toutiao.com/search?keyword=回响原著作者揭秘书中彩蛋)
 1. [1-10月全国房地产开发投资下降9.3%](https://so.toutiao.com/search?keyword=1-10月全国房地产开发投资下降9.3%)
-1. [媒体人：双11释放了3个信号](https://so.toutiao.com/search?keyword=媒体人：双11释放了3个信号)
 1. [高校教学楼突现臭味 师生下楼躲避](https://so.toutiao.com/search?keyword=高校教学楼突现臭味+师生下楼躲避)
 1. [困扰近亿人的慢阻肺究竟是什么](https://so.toutiao.com/search?keyword=困扰近亿人的慢阻肺究竟是什么)
 1. [前10月房地产开发投资仍处低位](https://so.toutiao.com/search?keyword=前10月房地产开发投资仍处低位)
